# awesome-lint-extra

./: .awesomerc.example.json  .coderabbit.yaml  AGENTS.md  CLAUDE.md  MANIFEST.in  README.md  action.yml  lint.py  pyproject.toml  requirements-test.txt
.github/: dependabot.yml
.github/workflows/: tests.yml
tests/: test_lint.py
